// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component.Pay.PayPanelBody current step is not summary should render correctly 1`] = `
<Fragment>
  <PayHelpText
    chainName="Bitcoin"
    cryptoUnitName="satoshi"
    currentStep="amount"
  />
  <PayAddressField
    chain="testnet"
    currentStep="amount"
    formApi={Object {}}
    formState={
      Object {
        "values": Object {},
      }
    }
    handlePayReqChange={[Function]}
    intl={Object {}}
    network=""
    paymentType="none"
  />
  <PayAmountFields
    cryptoUnit="sats"
    currentStep="amount"
    formApi={Object {}}
    intl={Object {}}
    isOnchain={false}
    lndTargetConfirmations={
      Object {
        "fast": 10,
        "medium": 5,
        "slow": 1,
      }
    }
    onchainFees={Object {}}
    queryFees={[Function]}
    walletBalanceConfirmed="1"
  />
  <PaySummaryWithTransition
    amountInSats="1"
    currentStep="amount"
    formApi={Object {}}
    lndTargetConfirmations={
      Object {
        "fast": 10,
        "medium": 5,
        "slow": 1,
      }
    }
    paymentType="none"
    routes={Array []}
  />
</Fragment>
`;

exports[`component.Pay.PayPanelBody current step is summary should render correctly 1`] = `
<Fragment>
  <PayHelpText
    chainName="Bitcoin"
    cryptoUnitName="satoshi"
    currentStep="summary"
  />
  <PayAddressField
    chain="testnet"
    currentStep="summary"
    formApi={Object {}}
    formState={
      Object {
        "values": Object {},
      }
    }
    handlePayReqChange={[Function]}
    intl={Object {}}
    network=""
    paymentType="none"
  />
  <PayAmountFields
    cryptoUnit="sats"
    currentStep="summary"
    formApi={Object {}}
    intl={Object {}}
    isOnchain={false}
    lndTargetConfirmations={
      Object {
        "fast": 10,
        "medium": 5,
        "slow": 1,
      }
    }
    onchainFees={Object {}}
    queryFees={[Function]}
    walletBalanceConfirmed="1"
  />
  <PaySummaryWithTransition
    amountInSats="1"
    currentStep="summary"
    formApi={Object {}}
    lndTargetConfirmations={
      Object {
        "fast": 10,
        "medium": 5,
        "slow": 1,
      }
    }
    paymentType="none"
    routes={Array []}
  />
</Fragment>
`;
